# Agentic_ai_demo

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
project/backend/: .env.example  README.md  ai_agent.py  config.py  main.py  pyproject.toml  requirements.txt  tools.py
project/frontend/: index.html  package.json
project/frontend/src/: App.jsx  api.js  styles.css
project/frontend_streamlit/: app.py  requirements.txt
